require invite code to register
