# docs/swagger.json
@@ -884,6 +884,7 @@
             "required": [
                 "email",
                 "first_name",
+                "invite_code",
                 "last_name",
                 "password"
             ],
@@ -892,6 +893,9 @@
                     "type": "string"
                 },
                 "first_name": {
+                    "type": "string"
+                },
+                "invite_code": {
                     "type": "string"
                 },
                 "last_name": {
